# transformer-from-scratch

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: checks.yml
alan_transformer/: attention.py  embed_unembed.py  example_use.ipynb  feed_forward.py  layer.py  mlp.py  positional_encoding.py  train.py  transformer.py  types.py
alan_transformer/examples/:  shakespeare.py  shakespeare.py
alan_transformer/examples/tests/: test_shakespeare.py
alan_transformer/tests/: test_attention.py  test_embed_unembed.py  test_feed_forward.py  test_layer.py  test_mlp.py  test_positional_encoding.py  test_train.py  test_transformer.py
alan_transformer/tests/snapshots/: snap_test_transformer.py
alan_transformer/tests/utils/: mock_parameter.py
transformer_from_scratch/: __init__.py  attention.py  conftest.py  embed_unembed.py  feed_forward.py  inference.py  layer.py  positional_encoding.py  train.py  transformer.py  types.py
transformer_from_scratch/components/: attention.py  config.py  cross_entropy_loss.py  embed_unembed.py  feed_forward.py  layer.py  mlp.py  positional_encoding.py
transformer_from_scratch/components/tests/: test_attention.py  test_cross_entropy_loss.py  test_embed_unembed.py  test_feed_forward.py  test_layer.py  test_mlp.py  test_positional_encoding.py
transformer_from_scratch/examples/: code.py  gpt2_code_comparison.py  shakespear.py  shakespeare.py
transformer_from_scratch/examples/tests/: test_shakespeare.py
transformer_from_scratch/examples/tests/snapshots/: snap_test_shakespeare.py
transformer_from_scratch/tests/: test_attention.py  test_embed_unembed.py  test_feed_forward.py  test_positional_encoding.py  test_train.py  test_transformer.py  test_types.py
transformer_from_scratch/tests/snapshots/: snap_test_transformer.py
transformer_from_scratch/tests/utils/: mock_parameter.py
