###########
# 📜 Poetry
###########
[tool.poetry]
name = "alan_transformer"
version = "0.1.0"
description = ""
authors = ["Alan <41682961+alan-cooney@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "alan_transformer"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
fancy-einsum = "^0.0.3"
numpy = "^1.24.2"
einops = "^0.6.0"
typeguard = "^2.13.3"
torchtext = "^0.14.1"
torchdata = "^0.5.1"
tqdm = "^4.65.0"
transformers = "^4.27.4"
datasets = "^2.11.0"
wandb = "^0.13.11"
jaxtyping = "^0.2.14"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.3.0"
detect-secrets = "1.2.0"
flake8 = "5.0.4"
flake8-comprehensions = "^3.11.1"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.4.0"
flake8-fixme = "^1.1.1"
flake8-implicit-str-concat = "^0.4.0"
flake8-mutable = "^1.2.0"
flake8-no-pep420 = "^2.3.0"
flake8-print = "^5.0.0"
flake8-return = "^1.2.0"
flake8-simplify = "^0.19.3"
ipdb = "^0.13.13"
ipykernel = "^6.22.0"
isort = "^5.12.0"
jupyter-black = "^0.3.3"
mypy = "^0.991"
pip-audit = "^2.5.4"
pre-commit = "^3.2.2"
pylint = "^2.17.2"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
snapshottest = "^0.6.0"
pylance = "^0.4.1"
jupyterlab = "^3.6.3"
toml = "^0.10.2"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

############
# ✅ Checks
############

[tool.isort]
profile = "black"

[tool.pylint.MASTER]
ignore-paths = [".git"]

[tool.black]
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=alan_transformer,typeguard.typechecked -s"
