###########
# 📜 Poetry
###########
[tool.poetry]
name = "transformer_from_scratch"
version = "0.1.0"
description = ""
authors = ["Alan <41682961+alan-cooney@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "transformer_from_scratch"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
fancy-einsum = "^0.0.3"
einops = "^0.6.0"
typeguard = "^2.13.3"
torchtext = "^0.14.1"
torchdata = "^0.5.1"
tqdm = "^4.65.0"
transformers = "^4.27.4"
datasets = "^2.11.0"
wandb = "^0.13.11"
jaxtyping = "^0.2.14"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.3.0"
ipdb = "^0.13.13"
ipykernel = "^6.22.0"
isort = "^5.12.0"
jupyter-black = "^0.3.3"
mypy = "^0.991"
pylint = "^2.17.2"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
snapshottest = "^0.6.0"
pylance = "^0.4.19"
jupyterlab = "^3.6.3"
toml = "^0.10.2"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

############
# ✅ Checks
############

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=transformer_from_scratch,typeguard.typechecked -s"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.pylint.TYPECHECK]
# Fix for Pytorch member existence checks
generated-members = "torch.*"

[tool.pylint.DESIGN]
max-args = 10 # Maximum number of arguments for function
min-public-methods = 1 # Minimum number of public methods for a class
max-locals = 30 # Maximum number of local variables for function / method

[tool.pylint."MESSAGES CONTROL"]
disable = "redefined-builtin" # Disable redefined builtin functions
